--- a/src/main/resources/templates/admin/admHeader.html
+++ b/src/main/resources/templates/admin/admHeader.html
@@ -32,8 +32,7 @@
         <img class="logo" th:src="@{/img/iconPet.png}" alt="logo"/>
         <div class="logo">Adopta.Me</div>
         <nav>
-            <a th:href="@{/}">Inicio</a>
-            <a th:href="@{/login/login}">Admin</a>
+            <a th:href="@{/logout}">Logout</a>
         </nav>
 
         <nav id="sidebar">
