--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
 
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
-		<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
-		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-table.min.css}"/>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datepicker3.css}"/>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/formValidation.css}"/>
+
+
+		<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+		<script type="text/javascript" th:src="@{/js/bootstrap-table.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/moment.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/bootstrap-datepicker.js}"></script>
+
+		<script type="text/javascript" th:src="@{/js/bootstrap-datepicker.es.js}"></script>
+		<script type="text/javascript" th:src="@{/js/bootstrap-table-es-AR.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/formValidation.js}"></script>
+		<script type="text/javascript" th:src="@{/js/formValidation-bootstrap.js}"></script>
 
 	</head>
 
@@ -14,11 +27,10 @@
 			<div class="wrapper col-xs-12 col-sm-12">
 				<img class="logo" th:src="@{/img/iconPet.png}" alt="logo"/>
 				<div class="logo">Adopta.Me</div>
-                <nav>
-                    <a th:href="@{/}">Inicio</a>
-                    <a th:href="@{/eventos}">Eventos</a>
-                    <a th:href="@{/login/login}">Admin</a>
-                </nav>
+				<nav>
+					<a th:href="@{/}">Inicio</a>
+					<a th:href="@{/login}">Admin</a>
+				</nav>
 			</div>
 		</header>
 
@@ -28,7 +40,7 @@
 					<img class="logo_login" th:src="@{/img/iconPet.png}" alt="logo"/>
 				</div>
 			</div>
-					<form  th:action="@{/login/ingresar}" th:object="${usuarioDTO}" method="POST">
+					<form  th:action="@{/ingresar}" th:object="${usuarioDTO}" method="POST">
 					   <div class="row">
 							<div class="offset-sm-4 col-sm-4">
 								<div class="form-group">
@@ -36,6 +48,10 @@
 								</div>
 								<div class="form-group">
 									<input type="password" class="form-control" placeholder="Password" id="password" th:field="*{password}"/>
+								</div>
+								<div>
+									<td th:text="${error}">1</td>
+
 								</div>
 								<div class="offset-sm-4 col-sm-2">
 									<button type="submit" class="btn btn-secondary btn-login">Entrar</button>
