--- a/src/main/resources/templates/admin/admHeader.html
+++ b/src/main/resources/templates/admin/admHeader.html
@@ -46,15 +46,15 @@
             <a th:href="@{/usuarios/nuevoUsuario}" class="list-group-item list-group-item-action">Usuarios</a>
             <a th:href="@{/prestador/nuevoPrestador}" class="list-group-item list-group-item-action">Servicios</a>
             <a th:href="@{/admin/eventos}" class="list-group-item list-group-item-action">Eventos</a>
+            <a th:href="@{/logout}" class="list-group-item list-group-item-action">Logout</a>
+
 
             <div class="divisor"></div>
 
             <h3>Estadisticas</h3>
-            <a th:href="@{/usuarios/nuevoUsuario}" class="list-group-item list-group-item-action">Usuarios</a>
-            <a th:href="@{/prestador/nuevoPrestador}" class="list-group-item list-group-item-action">Servicios</a>
-            <a th:href="@{/prestador/nuevoPrestador}" class="list-group-item list-group-item-action">Eventos</a>
+            <a th:href="@{/admin/chart}" class="list-group-item list-group-item-action">Mascotas</a>
 
-            <a th:href="@{/logout}">Logout</a>
+
 
         </nav>
     </div>
