fix pantalla publica

--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -155,8 +155,8 @@ function cargarMascotasEnAdopcion() {
 
 
                 var mascotaElem= $('<div class="card-body"> <div class="col-sm-3"> <img src="'+mascota.foto_url+'" class=" rounded-circle img_list float-left "/>   </div>'
-                    +' <div class="offset-sm-3 col-sm-9">  <h2 class="tit_item">'+mascota.nombre+' <span class="edad"> Edad '+mascota.edad+'</span></h2>'
-                    +' <p class="descripcion"> '+mascota.descripcion+'  raza '+mascota.raza+' sexo '+mascota.sexo+' tamaño '+mascota.tamanio+'</p>\n'
+                    +' <div class="offset-sm-3 col-sm-9">  <h2 class="tit_item">Nombre:' +mascota.nombre+' <span class="edad"> Edad: '+mascota.edad+'</span></h2>'
+                    +' <p class="descripcion"> '+mascota.descripcion+'  Raza '+mascota.raza+' Sexo '+mascota.sexo+' Tamaño '+mascota.tamanio+'</p>\n'
                     +' </div></div> '
                 );
 
