--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -138,19 +138,14 @@ h2 {
 	margin: 0;
 }
 
-.card{
-	margin:0.4em ;
-}
-
 .card-body{
-	padding:1em !important;
+	padding:0em !important;
 }
 
 .img_list{
 	width:6em;
-	height:auto;
-	margin: 0;
-
+	height:6em;
+	margin: 0.5em;
 }
 .img_masc_adop{
 	width:8em;
@@ -178,6 +173,7 @@ h2 {
 
 .tit_item{
 	text-align:left !important;
+	text-transform: capitalize;
 }
 
 .off-border{
@@ -192,6 +188,7 @@ footer {
    color: white;
    text-align: center;
    padding: 0.5em;
+	position: fixed;
 }
 
 .img_red{
@@ -281,6 +278,121 @@ label{
 
 .modal-footer{
 	border-top: none !important;
+}
+.titEvent{
+	font-weight:bold;
+	font-size: 20px;
+	padding: 10px;
+	margin-top: 10px;
+	text-align: center;
+}
+.titDato{
+	font-weight:bold;
+	font-size: 17px;
+	padding: 0;
+	margin-top: 0;
+	text-align: right;
+}
+.datoText{
+	padding: 0;
+	margin: 0;
+	font-size: 17px;
+}
+.iconCalendar{
+	width: 40px;
+	height: 40px;
+	margin-right: 10px;
+}
+
+.card-event {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 80%;
+	border-radius: 5px;
+	margin-left: 3em;
+	margin-right: 3em;
+	margin-top: 1em;
+}
+.card-adopt{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 80%;
+	border-radius: 5px;
+	margin-left: 6em;
+	margin-right: 6em;
+	margin-top: 1em;
+}
+.card-masc {
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	min-width: 0;
+	word-wrap: break-word;
+	background-color: #fff;
+	background-clip: border-box;
+	border: 1px solid rgba(0,0,0,.125);
+	border-radius: .25rem;
+	padding-bottom: 1em;
+}
+
+.card{
+	margin:0.4em ;
+	align-items: center;
+}
+
+.card-puntas {
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	min-width: 0;
+	word-wrap: break-word;
+	background-color: #fff;
+	background-clip: border-box;
+	border: 1px solid rgba(0,0,0,.125);
+	border-radius: .25rem;
+}
+
+.card-peque{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 60%;
+	border-radius: 5px;
+	margin-left: 6em;
+	margin-right: 6em;
+	margin-top: 1em;
+}
+
+.card-header{
+	margin-bottom: 1em; !important;
+}
+
+.img-adop{
+	width:11em;
+	height: 11em;
+	margin-top: 3em;
+	margin-left: 3em;
+	margin-right: 3em;
+}
+
+.nom-masc{
+	font-weight:bold;
+	font-size: 20px;
+	padding: 0;
+	margin-top: 0;
+	margin-left: 2em;
+	margin-right: 2em;
+	text-align: center; !important;
+	text-transform: capitalize;
 }
 
 @media screen and (max-width: 950px) {
