--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -63,20 +63,12 @@
 	<div class="divisor"></div>
 <footer>
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-4">
-				<img class="img_contact" th:src="@{/img/contact.png}" alt="contact" />
+		<div class="row" style="justify-content: center">
+			<div class="col-sm-4" >
 				<h4>Contacto</h4>
+				<a href="mailto:adoptameargapp@gmail.com" > <img class="img_contact" th:src="@{/img/contact.png}" alt="contact" /> </a>
 			</div>
-			<div class="col-sm-4">
-				<h4>Encontranos en:</h4>
-				<img class="img_red" th:src="@{/img/facebook.png}" alt="facebook"/>
-				<img class="img_red" th:src="@{/img/instagram.png}" alt="instagram" />
-			</div>
-			<div class="col-sm-4">
-				<img class="img_red" th:src="@{/img/playstore.png}" alt="playstore"/>
-				<h4 >Descargar APP</h4>
-			</div>
+
 		</div>
 	</div>
 </footer>
