--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -170,7 +170,6 @@ h2 {
 	text-align:left !important;
     color: #797979;
 }
-
 .tit_item{
 	text-align:left !important;
 	text-transform: capitalize;
@@ -285,6 +284,7 @@ label{
 	padding: 10px;
 	margin-top: 10px;
 	text-align: center;
+	text-transform: capitalize;
 }
 .titDato{
 	font-weight:bold;
@@ -297,6 +297,7 @@ label{
 	padding: 0;
 	margin: 0;
 	font-size: 17px;
+	width: 200px;
 }
 .iconCalendar{
 	width: 40px;
