retoques de estilos

--- a/src/main/resources/templates/admin/admEventos.html
+++ b/src/main/resources/templates/admin/admEventos.html
@@ -32,7 +32,7 @@
                             <div class="row">
 
                                 <div class="col-md-4">
-                                    <label for="fecha">* Dia:</label>
+                                    <label for="fecha">* Día:</label>
                                     <input class="form-control" type="text" id="dias" name="dias" onchange="revalidarDias();" />
                                     <!--th:field="*{}"-->
                                 </div>
@@ -43,7 +43,7 @@
                                 </div>
 
                                 <div class="col-md-4">
-                                    <label for="direccion">* Direccion:</label>
+                                    <label for="direccion">* Dirección:</label>
                                     <input type="text" class="form-control" id="direccion" name="direccion" required="true"  /> <!--th:field="*{}"-->
                                 </div>
 
@@ -105,7 +105,7 @@
                         <thead>
                         <tr>
                             <th data-field="id" >Id Evento</th>
-                            <th data-field="dias" >Dia</th>
+                            <th data-field="dias" >Día</th>
                             <th data-field="horarios">Horario</th>
                             <th data-field="lugar">Lugar</th>
                             <th data-field="barrio">Barrio</th>
@@ -143,7 +143,7 @@
 
                             <input type="hidden" class="form-control" id="idEventoEditar" />
                             <div class="col-md-6">
-                                <label for="dia">* dia</label>
+                                <label for="dia">* Día</label>
                                 <input type="text" class="form-control" id="diaEventoEditar" name="diaEventoEditar" onchange="revalidarDiasEditar()" />
                             </div>
                             <div class="col-md-6">
