--- a/src/main/resources/templates/usuarios/admUsuarios.html
+++ b/src/main/resources/templates/usuarios/admUsuarios.html
@@ -101,8 +101,8 @@
                     <th data-field="id">Id usuario</th>
                     <th data-field="nombre">Nombre</th>
                     <th data-field="apellido">Apellido</th>
-                    <th data-field="email">email</th>
-                    <th data-field="rol">rol</th>
+                    <th data-field="email">Email</th>
+                    <th data-field="rol">Rol</th>
                     <th data-formatter="TableActions">Action</th>
 
 
