--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -140,6 +140,7 @@ h2 {
 
 .card-body{
 	padding:0em !important;
+	margin: 1em;
 }
 
 .img_list{
@@ -267,12 +268,14 @@ label{
 }
 
 .modal-body{
-	text-align: center;
 	font-size: 20px;
 	margin-top: 2em;
 }
 .modal-header{
 	background: #212529 ;
+}
+.pagination-info{
+	margin-left: 1em;
 }
 
 .modal-footer{
@@ -297,8 +300,17 @@ label{
 	padding: 0;
 	margin: 0;
 	font-size: 17px;
-	width: 200px;
 }
+
+.desc-evento{
+	margin-left: 5em;
+	font-size: 17px;
+}
+
+.div-desc-evn{
+	margin-left: 2em;
+}
+
 .iconCalendar{
 	width: 40px;
 	height: 40px;
