--- a/src/main/resources/templates/prestador/admServicios.html
+++ b/src/main/resources/templates/prestador/admServicios.html
@@ -41,7 +41,7 @@
                                             <input type="text" class="form-control" id="apellido" name="apellido"/>
                                         </div>
                                        <div class="col-md-4">
-                                            <label for="direccion">* Direccion:</label>
+                                            <label for="direccion">* Dirección:</label>
                                             <input type="text" class="form-control" id="direccion" name="direccion"/>
                                         </div>
 
@@ -72,7 +72,7 @@
                                         <div class="col-md-2">
                                             <label for="tipoServicio">* Tipo Servicio:</label>
                                             <select class="form-control" id="tipoServicio" name="tipoServicio">
-                                                <option th:value="Guarderia" th:text="Guarderia"></option>
+                                                <option th:value="Guarderia" th:text="Guardería"></option>
                                                 <option th:value="Veterinaria" th:text="Veterinaria"></option>
                                             </select>
                                         </div>
@@ -118,7 +118,7 @@
                                     <th data-field="email">Email</th>
                                     <th data-field="tipoServicio" >Tipo Servicio</th>
                                     <th data-field="titulo">Titulo</th>
-                                    <th data-field="descripcion">Descripcion</th>
+                                    <th data-field="descripcion">Descripción</th>
                                     <th data-field="costo">Costo $</th>
                                     <th data-field="urlPago">URL Pago</th>
                                     <th data-field="fechaFin" >Fecha Hasta</th>
