--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -49,7 +49,7 @@
 
 
                     <!--Eventos Proximos-->
-				<div class="col-xs-8 col-sm-3">
+				<div class="col-xs-8 col-sm-4">
 					<div class="card-puntas scroll-box" id="eventosDiv">
 						<h2 class="card-header " >Eventos Próximos</h2>
 
@@ -113,7 +113,11 @@ function cargarProximosEventos() {
 						+'</div>'
 						+'<div class="row">'
 						+'<div class="col-md-5 titDato">Descripción:</div>'
-						+'<spam class="datoText">'+evento.consultas+'</spam>'
+						+'</div>'
+						+'<div class="row">'
+						+'<div class="col-md-12">'
+						+'<div class="desc-evento">'+evento.consultas+'</div>'
+						+'</div>'
 						+'</div>'
 						+'</div>'
 
